# mlframework

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cli/: main.cpp
include/mlframework/: cnn.hpp  cuda_internal.hpp  dataloader.hpp  layer.hpp  loss.hpp  mlp.hpp  model_io.hpp  module.hpp  ops.hpp  ops_cuda.hpp  optimizer.hpp  tensor.hpp
models/: mnist.mlf  mnist_v2.mlf  mnist_v3.mlf
src/: cnn.cpp  dataloader.cpp  layer.cpp  loss.cpp  mlp.cpp  model_io.cpp  module.cpp  ops.cpp  optimizer.cpp  tensor.cpp
src/cuda/: ops_cuda.cu  tensor_cuda.cu
tests/: test_tensor.cpp
